--- a/5th Edition OGL by Roll20/translations/es.json
+++ b/5th Edition OGL by Roll20/translations/es.json
@@ -4,7 +4,7 @@
 	"name-u": "NOMBRE",
 	"npc-type-u": "TIPO DE PNJ",
 	"npc-type-place": "Demoníaco mediano, cualquier alineamiento maligno",
-	"armor-class-u": "CLASE DE ARMADURA",
+	"armor-class-u": "CA",
 	"class-u": "CLASE",
 	"type-u": "TIPO",
 	"abilities-u": "CARACTERÍSTICAS",
@@ -41,7 +41,7 @@
 	"stealth-u": "SIGILO",
 	"survival-u": "SUPERVIVENCIA",
 	"damage-vuln-u": "VULNERABILIDAD A DAÑO",
-	"npc-dmg-vuln-place": "fuego",
+	"npc-dmg-vuln-place": "fuego ",
 	"damage-res-u": "RESISTENCIA A DAÑO",
 	"npc-dmg-res-place": "frío",
 	"damage-imm-u": "INMUNIDAD A DAÑO",
@@ -54,7 +54,7 @@
 	"lang-u": "IDIOMA",
 	"npc-langs-place": "Abisal, Común, Infernal",
 	"challenge-u": "DESAFÍO",
-	"xp-u": "PE",
+	"xp-u": "PX",
 	"spellcast-npc-u": "PNJ LANZADOR DE CONJUROS",
 	"spell-ability-u": "APTITUD MÁGICA",
 	"none-u": "NINGUNA",
@@ -71,7 +71,7 @@
 	"charisma-u": "CARISMA",
 	"charisma-save-u": "SALVACIÓN DE CARISMA",
 	"spell-dc-u": "CD DE CONJURO",
-	"spell-atk-bonus-u": "BONIFICADOR DE ATAQUE DE CONJUROS",
+	"spell-atk-bonus-u": "BONIFICADOR DE ATAQUE DE CONJURO",
 	"has-reaction-u": "TIENE REACCIONES",
 	"leg-actions:-u": "ACCIONES LEGENDARIAS:",
 	"gen-opts-u": "OPCIONES GENERALES",
@@ -81,7 +81,7 @@
 	"adv-toggle": "Activar Ventaja",
 	"query-adv": "Preguntar por Ventaja",
 	"never-adv": "Nunca Tirar con Ventaja",
-	"whisp-rolls-gm:-u": "SUSURRAR TIRADAS AL GM:",
+	"whisp-rolls-gm:-u": "SUSURRAR TIRADAS AL DM:",
 	"never-whisp": "Nunca Susurrar Tiradas",
 	"query-whisp": "Preguntar Susurro",
 	"always-whisp": "Siempre Susurrar Tiradas",
@@ -168,7 +168,7 @@
 	"ritual": "RITUAL",
 	"ritual-l": "ritual",
 	"range:-u": "ALCANCE:",
-	"range:": "Alcance:",
+	"range:": "alcance:",
 	"components:-u": "COMPONENTES:",
 	"components:": "Componentes:",
 	"spell-component-verbal": "V",
@@ -213,7 +213,7 @@
 	"char-name-u": "NOMBRE DE PERSONAJE",
 	"barbarian": "Bárbaro",
 	"bard": "Bardo",
-	"cleric": "Clérigo",
+	"cleric": "Clerigo",
 	"druid": "Druida",
 	"fighter": "Guerrero",
 	"monk": "Monje",
@@ -263,9 +263,9 @@
 	"sleight_of_hand-core": "Juego de Manos <span>(Des)</span>",
 	"stealth-core": "Sigilo <span>(Des)</span>",
 	"survival-core": "Supervivencia <span>(Sab)</span>",
-	"pass-wis-u": "SABIDURÍA (PERCEPCIÓN) PASIVA",
+	"pass-wis-u": "SABIDURÍA PASIVA (PERCEPCIÓN)",
 	"tool-u": "HERRAMIENTA",
-	"pro-u": "COMP",
+	"pro-u": "PRO",
 	"attr-u": "ATRIBUTO",
 	"prof-bonus:-u": "BONIFICADOR POR COMPETENCIA:",
 	"prof-u": "COMPETENTE",
@@ -273,8 +273,8 @@
 	"expertise-u": "PERICIA",
 	"jack-of-all-u": "APRENDIZ DE MUCHO",
 	"attr:-u": "ATRIBUTO:",
-	"tool-prof-u": "COMPETENCIAS CON HERRAMIENTAS",
-	"weapon-proficiencies-u": "COMPETENCIAS CON ARMAS",
+	"tool-prof-u": "COMPETENCIA CON HERRAMIENTAS",
+	"weapon-proficiencies-u": "COMPETENCIA CON ARMAS",
 	"other-prof-langs-u": "OTRAS COMPETENCIAS E IDIOMAS",
 	"prof-langs-u": "COMPETENCIAS E IDIOMAS",
 	"init": "Iniciativa",
@@ -303,7 +303,7 @@
 	"proficient-u": "COMPETENTE",
 	"range-place": "Lanzador (cono 60 pies)",
 	"magic-bonus:-u": "BONIFICADOR MÁGICO:",
-	"crit-range-u": "RANGO DE CRÍTICO:",
+	"crit-range-u": "ALCANCE DE CRÍTICO:",
 	"damage:-u": "DAÑO:",
 	"dmg-type-place": "Cortante",
 	"crit:-u": "CRÍTICO:",
@@ -313,7 +313,7 @@
 	"spell-u": "CONJURO",
 	"flat-u": "FIJO",
 	"save": "Salvación",
-	"save-effect:-u": "EFECTO DE SALVACIÓN:",
+	"save-effect:-u": "EFECTO SALVACIÓN:",
 	"save-effect-place": "mitad de daño",
 	"ammunition:-u": "MUNICIÓN:",
 	"ammunition-place": "Flechas",
@@ -358,7 +358,7 @@
 	"add-feats-traits-u": "RASGOS Y ATRIBUTOS ADICIONALES",
 	"feat-u": "DOTE",
 	"treasure-u": "TESORO",
-	"spell-save-dc-u": "CD TIRADA DE SALVACIÓN DE CONJUROS",
+	"spell-save-dc-u": "CD SALVACIÓN CONJURO",
 	"cantrips-u": "TRUCOS",
 	"ritual-u": "RITUAL",
 	"casting-time:-u": "TIEMPO DE LANZAMIENTO:",
@@ -367,7 +367,7 @@
 	"half-dmg-place": "Mitad de daño",
 	"hit-die:-u": "DADO DE GOLPE:",
 	"initiative-mod:-u": "MODIFICADOR DE INICIATIVA:",
-	"glob-saving-mod:-u": "MODIFICADOR GLOBAL DE TIRADA DE SALVACIÓN:",
+	"glob-saving-mod:-u": "MODIFICADOR GLOBAL DE SALVACIÓN:",
 	"glob-ac-mod:-u": "MODIFICADOR GLOBAL DE CLASE DE ARMADURA:",
 	"glob-atk-mod:-u": "MODIFICADOR GLOBAL DE ATAQUE MÁGICO:",
 	"pass-perc-mod:-u": "MODIFICADOR DE PERCEPCIÓN PASIVA:",
@@ -382,7 +382,7 @@
 	"race:-u": "RAZA:",
 	"subrace:-u": "SUBRAZA:",
 	"subrace": "Subraza:",
-	"subrace-ability-increase": "Incremento Puntuación Característica por Subraza:",
+	"subrace-ability-increase": "Incremento Puntuación Caracteristica por Subraza:",
 	"2nd-class:-u": "2ª CLASE:",
 	"lvl:-u": "NIVEL:",
 	"3rd-class:-u": "3ª CLASE:",
@@ -421,8 +421,8 @@
 	"transition-text": "Haciendo click en una de las imágenes de abajo reformatearás los datos de tu hoja actual a esta hoja. Estos cambios son permanentes y no pueden deshacerse.",
 	"transition-text-highlight": "Por favor realiza una copia de tu partida antes de usar esta herramienta.",
 	"choose-sheet-transfer": "ESCOGE LA PLANTILLA DE LA CUÁL VAS A TRASFERIR",
-	"community-sheet-u": "COMMUNITY SHEET",
-	"shaped-sheet-u": "SHAPED SHEET",
+	"community-sheet-u": "PLANTILLA DE LA COMUNIDAD",
+	"shaped-sheet-u": "PLANTILLA CON FORMATO",
 	"transition-opts-u": "OPCIONES DE TRANSICIÓN",
 	"portions-sheet-utilize": "Partes de esta plantilla utilizan contenido del Documento de Referencia del Sistema 5.0 bajo licencia OGL. Revisa la Licencia OGL y los datos de Copyright. https://wiki.roll20.net/SRD_5.0_OGL_License",
 	"api-required-title": "Try it now with easy one click API installation available with your Pro subscription.",
@@ -430,11 +430,11 @@
 	"spell_dc_mod:-u": "MODIFICADOR CD SALVACIÓN CONJURO:",
 	"custom_ac:-u": "CA PERSONALIZADA:",
 	"npc-info": "The NPC option sets new characters to default to the NPC card style sheet. Useful if the player characters have already been created and all new character sheets added to the game will likely representing non player characters.",
-	"npc-pc": "PNJ/PJ",
+	"npc-pc": "NPJ/PJ",
 	"roll-queries-info": "D20 Rolls output according to this option. Always Roll Advantage is the default setting and will roll two D20 on every roll in case of advantage. The expectation is that if there is no advantage or disadvantage you use the left most result. The Advantage Toggle option adds three new buttons to the top of the sheet so that you can toggle advantage on a case by case basis. Query Advantage gives you a prompt every roll asking if the roll has advantage. Never Roll Advantage always rolls a single D20 on any given roll, expecting the player to roll a second time in case of advantage or disadvantage.",
-	"whisp-rolls-gm-info": "Todas las tiradas de ficha son enviadas a todos los jugadores en el chat de forma predeterminada. Activar Susurro ofrece un conjunto de botones para seleccionar rápidamente tu preferencia sobre la marcha. La opción Preguntar Susurro te da un aviso con cada tirada de si la tirada debe enviarse en privado solo a ti y al GM. Susurrar Tiradas Siempre enviará todas las tiradas solo a ti y al GM.",
+	"whisp-rolls-gm-info": "All sheet rolls are sent to all players in chat by default. Query Whisper option gives you a prompt with each roll of whether or not the roll should be sent privately only to yourself and the GM. Always Whisper Rolls will send all rolls only to yourself and the GM.",
 	"auto-dmg-roll-info": "By default, attack damage rolls are not rolled until the hit is confirmed. Damage is rolled from the chat roll template by clicking on the name of the attack in the right hand bar, which then displays the damage. The default method is compatible with 3D dice. Optionally, you can choose to have the Auto Roll Damage & Crit option which will roll damage and critical hit dice at the same time of the attack, presenting all possible outcomes at the time of the attack.",
-	"add-char-to-templates-info": "Los nombres de los personajes no se agregan a la plantilla de tirada de forma predeterminada, y solo se muestran de manera normal en la pestaña de chat como el jugador / personaje seleccionado como 'Hablando como'. Activar esta opción añade el nombre del personaje a la tirada de plantilla, útil para jugadores que representan múltiples personajes.",
+	"add-char-to-templates-info": "Character names are not added to the roll template by default, and are only displayed as normal in the chat tab as the player/character selected as 'Speaking As'. Turning this option on adds the character making the roll's name to the template, useful for players represting multiple characters.",
 	"inventory-info": "Character Inventories default to the complex style that is compatible with the Roll20 5E Compendium. This includes granular item amounts/weights, weight and encumbrance tracking, sorting, AC calculations, automatic attack generation, and more. The Simple option provides a text field for item lists for players who want more manual control over the sheet.",
 	"encumbrance-info": "The sheet uses the variant encumbrance rules on page 176 of the PHB. The Off option disables the variant rules and only uses a basic over-limit inventory weight check.",
 	"ammo-tracking-info": "Provides automatic ammo tracking with the <a src='https://wiki.roll20.net/5th_Edition_OGL_by_Roll20#Utilizing_the_5th_Edition_OGL_Companion_API_Script'>5th Edition OGL by Roll20 Companion API Script</a>.",
@@ -458,7 +458,7 @@
 	"cd-bar3-value-desc:-u": "On Default Tokens created by doing a Compendium drop onto the virtual table top, set the Bar 3's value to this attribute.",
 	"cd-bar3-max-desc:-u": "On Default Tokens created by doing a Compendium drop onto the virtual table top, set the Bar 3's max to this attribute.",
 	"cd-bar3-link-desc:-u": "On Default Tokens created by doing a Compendium drop onto the virtual table top, link the Bar 3's value to this attribute. If set this will override all other bar settings.",
-	"npc-name-in-rolls:-u": "NOMBRE DE PNJ EN TIRADAS:",
+	"npc-name-in-rolls:-u": "NOMBRES DE PNJS EN TIRADAS:",
 	"show": "Mostrar",
 	"hide": "Esconder",
 	"npc-name-in-rolls-desc:-u": "In NPC roll results, show or hide the name of the NPC in the roll result card.",
@@ -467,18 +467,18 @@
 	"toggle-roll-whisper": "Activar Susurro",
 	"attribute-opts-u": "OPCIONES DE ATRIBUTO",
 	"save-opts-u": "OPCIONES SALVACIÓN",
-	"by-level": "Por Nivel (Por defecto)",
+	"by-level": "Por Nivel (Default)",
 	"prof-die": "Dado de competencia (DMG)",
 	"custom": "Personalizado",
-	"core-die-roll:-u": "TIRADA DADO PRINCIPAL:",
+	"core-die-roll:-u": "TIRADAS PRINCIPALES DE DADOS:",
 	"has-attack-u": "TIENE UN ATAQUE",
 	"variant-phb": "Variante (PHB p176)",
 	"carrying-capacity-mod:-u": "MODIFICADOR CAPACIDAD DE CARGA:",
 	"armor-class-tracking:-u": "SEGUIMIENTO CLASE ARMADURA:",
-	"automatic": "Automático",
-	"cantrip-progression:-u": "PROGRESIÓN DE TRUCO",
-	"cantrip-dice-u": "DADO DE TRUCO",
-	"cantrip-beam-u": "RAYO DE TRUCO",
+	"automatic": "Automatico",
+	"cantrip-progression:-u": "PROGRESIÓN DE TRUCOS",
+	"cantrip-dice-u": "DADO DE TRUCOS",
+	"cantrip-beam-u": "RAYO DE TRUCOS",
 	"slots_total-u": "ESPACIOS TOTALES",
 	"slots_remaining-u": "ESPACIOS RESTANTES",
 	"level-calculations:-u": "CALCULOS NIVEL AUTOMATICO:",
@@ -515,7 +515,7 @@
 	"global-skill-u": "MODIFICADOR DE HABILIDAD GLOBAL",
 	"global-damage": "Modificador de Daño Global",
 	"core-die-roll-info": "Changing the core die will replace the normal 1d20 made with almost all rolls with a randomizer of your choice, such as 2d10 or 3d6.",
-	"pb-type-info": "Por defecto, el Bonificador por Competencia del personaje se calculará automáticamente en función de su nivel total, como es el método estándar en el PHB. La opción Dado de Competencia admite el método alternativo descrito en el DMG donde, en lugar de un bono fijo, se tira un dado. La opción Personalizada le permite reemplazar el BC con cualquier cosa que elija.",
+	"pb-type-info": "By default, the character's Proficiency Bonus will be automatically calculated based off of their total level as is the standard method in the PHB. The Proficency Die option supports the alternate method outlined in the DMG where, instead of a flat bonus, a die is rolled instead. The Custom option allows you to replace the PB with anything of your choosing.",
 	"global-save-info": "Creates a custom global save modifier field, underneath the SAVING THROWS section of the character sheet. Anything put there will be applied to any save roll. Perfect for regular but not permanent bonuses like the Bless spell.",
 	"global-skill-info": "Creates a custom global skill modifier field, underneath the SKILLS section of the character sheet. Anything put there will be applied to any save roll. Perfect for regular but not permanent bonuses like the Guidance spell.",
 	"global-attack-info": "Creates a custom global attack modifier field, underneath the ATTACKS AND SPELL CASTING section of the character sheet. Anything put there will be applied to any attack to-hit roll. Perfect for regular but not permanent bonuses to attack like the Bless spell.",
@@ -541,7 +541,7 @@
 	"get-started": "Get started by clicking Next.",
 	"opt-out-u": "OPT OUT",
 	"charmancer-compendium": "Your Compendium Awaits.",
-	"charmancer-compendium-detail": "El Charactermancer actualmente es compatible con Dungeons &amp; Dragons 5th Edition SRD, Player's Handbook, y Guildmasters' Guide to Ravnica. Puedes agregar el Player's Handbook and Guildmasters' Guide to Ravnica a tu compendio en el Marketplace, o el creador de la partida puede compartir su compendio con todos en la partida.",
+	"charmancer-compendium-detail": "The Charactermancer currently supports Dungeons &amp; Dragons 5th Edition SRD and the Player's Handbook. You can add the Player's Handbook to your compendium in the Marketplace, or the game owner can share their compendium with everyone in the game.",
 	"charmancer-choose-race": "Choose a Race:",
 	"charmancer-custom-race-name": "Custom Race Name:",
 	"charmancer-custom-subclass-name:": "Custom sublass Name:",
@@ -559,13 +559,13 @@
 	"lawful-evil": "Legal malvado",
 	"neutral-evil": "Neutral malvado",
 	"chaotic-evil": "Caótico malvado",
-	"tiny": "Diminuto/a",
+	"tiny": "Minúsculo/a",
 	"small": "Pequeño/a",
 	"medium": "Mediano/a",
 	"large": "Grande",
 	"huge": "Enorme",
 	"age": "Edad:",
-	"gargantuan": "Gargantuesco/a",
+	"gargantuan": "Gigantesco/a",
 	"step1-equipment": "Step 5: Equipment",
 	"equipment-from-background": "Equipment from Background",
 	"equipment-from-class": "Equipment from Class",
@@ -580,7 +580,7 @@
 	"continue-charmancer": "Continue Charactermancer",
 	"save_progress_and_exit": "Save and Exit",
 	"cancel_charactermancer": "Discard and exit",
-	"charmancer-discard-warning": "Descartar y Salir descartará todas las elecciones que hayas hecho en Charactermancer y te permitirá editar tu hoja de personaje directamente.",
+	"charmancer-discard-warning": "Discard and Exit will cause all choices to be lost.",
 	"mancer-opts-u": "CHARACTERMANCER OPTIONS",
 	"relaunch-lvl1mancer-u": "LAUNCH LEVEL 1 CHARACTERMANCER (CANNOT BE UNDONE)",
 	"point-buy": "Point Buy",
@@ -598,7 +598,7 @@
 	"global-ac-u": "GLOBAL AC MODIFIER",
 	"show-global-ac-field-u": "SHOW GLOBAL AC MODIFIER FIELD",
 	"warning-customac-u": "ATTENTION - CUSTOM AC IS NOT BEING USED. TO USE CUSTOM AC, UNEQUIP ARMOR.",
-	"manual": "Editar hoja directamente",
+	"manual": "Edit sheet direclty",
 	"npc-new": "Create an NPC",
 	"mancer-confirm-yes": "Use the Charactermancer",
 	"allow-shields-u": "ALLOW SHIELDS?",
@@ -642,7 +642,7 @@
 	"add-another-feature": "Add Another Feature",
 	"add-another-proficiency": "Add Another Proficiency",
 	"innate-spellcasting:": "Innate Spellcasting:",
-	"spellcasting-ability": "Aptitud Mágica:",
+	"spellcasting-ability": "Spellcasting Ability:",
 	"number-of-cantrips": "Number of Cantrips:",
 	"number-of-lvl-1-spells": "Number of Level 1 Spells:",
 	"spell-list": "Spell List:",
@@ -651,28 +651,28 @@
 	"input-your-scores": "Introduce Tus Puntuaciones:",
 	"choose-background": "Elige un Trasfondo:",
 	"personality-traits": "Rasgos de Personalidad",
-	"ideal": "Ideal",
-	"bond": "Vinculo",
-	"flaw": "Defecto",
+	"ideal": "Ideales",
+	"bond": "Vinculos",
+	"flaw": "Defectos",
 	"you-have-chosen-starting-gold": "You have chosen starting gold and do not get equipment from your background.",
 	"you-have-created-custom-class": "You have created a custom class; you can add equipment to the character sheet after you have finished the Charactermancer.",
-	"arcane-is-mystery": "La Magia es un misterio para ti.",
-	"your-character-dont-have-spells-this-lvl": "Tu personaje no tiene conjuros a este nivel. ¡Pulsa \"Siguiente\" para repasar tu personaje!",
+	"arcane-is-mystery": "The Arcane is a mystery to you.",
+	"your-character-dont-have-spells-this-lvl": "Your character doesn't have spells at this level. Click “Next” to review your character!",
 	"charmancer-a-feat-represents": "A feat represents accomplishment, grit, determination, and expertise. It is the reward for hard work.",
-	"you-really-havent-done": "No has hecho mucho todavía",
+	"you-really-havent-done": "You really haven't done that much yet",
 	"review-your-choices": "Revisa tus elecciones:",
 	"race": "Raza",
 	"abilities": "Características",
 	"bio": "Bio",
 	"name-background": "Nombre:",
-	"building-your-character": "Creando tu personaje...",
-	"charmancer-only-choice-left-is-on-or": "La única opción que queda es presionar o retroceder. Si está editando un personaje existente, todos sus datos existentes se perderán en el vacío cuando aplique sus cambios.",
-	"apply-changes": "Aplicar Cambios",
-	"pick-your-equipment": "Elige tu equipo",
-	"you-havent-chosen-background": "Aún no has seleccionado un trasfondo.",
-	"you-havent-selected-class": "Aún no has seleccionado una clase.",
-	"ability-score": "Puntuación de Característica",
-	"you-can-increase-two-abilites": "Puedes aumentar dos de tus características en 1, o una de tus características en 2",
-	"before-leveling": "Antes de Subir de Nivel",
-	"after-leveling": "Después de Subir de Nivel"
+	"building-your-character": "Building your character...",
+	"charmancer-only-choice-left-is-on-or": "The only choice left is to press on or turn back. If you're editing an existing character, all your existing data will be lost into the void when you apply your changes.",
+	"apply-changes": "Apply Changes",
+	"pick-your-equipment": "Pick your equipment",
+	"you-havent-chosen-background": "You have not yet selected a background.",
+	"you-havent-selected-class": "You have not yet selected a class.",
+	"ability-score": "Ability Score",
+	"you-can-increase-two-abilites": "You can increase two of your abilities by 1, or one of your abilities by 2",
+	"before-leveling": "Before Leveling",
+	"after-leveling": "After Leveling"
 }
