--- a/5th Edition OGL by Roll20/translations/zh.json
+++ b/5th Edition OGL by Roll20/translations/zh.json
@@ -1,5 +1,5 @@
 {
-	"skills-list": "特技,馴獸,秘法,運動,欺瞞,歷史,洞察,威嚇,調查,醫藥,自然,感知,表演,說服,宗教,巧手,潛行,生存",
+	"skills-list": "acrobatics,animal-handling,arcana,athletics,deception,history,insight,intimidation,investigation,medicine,nature,perception,performance,persuasion,religion,sleight-of-hand,stealth,survival",
 	"npc-options-u": "NPC 選項",
 	"name-u": "名稱",
 	"npc-type-u": "NPC 種類",
@@ -53,9 +53,9 @@
 	"langs-u": "語言",
 	"lang-u": "語言",
 	"npc-langs-place": "深淵語，通用語，煉獄語",
-	"challenge-u": "挑戰",
+	"challenge-u": "挑戰等級",
 	"xp-u": "XP",
-	"spellcast-npc-u": "施法型 NPC",
+	"spellcast-npc-u": "施法型NPC",
 	"spell-ability-u": "施法屬性",
 	"none-u": "無",
 	"strength-u": "力量",
@@ -70,10 +70,10 @@
 	"wisdom-save-u": "感知豁免",
 	"charisma-u": "魅力",
 	"charisma-save-u": "魅力豁免",
-	"spell-dc-u": "法術 DC",
+	"spell-dc-u": "法術DC",
 	"spell-atk-bonus-u": "法術攻擊加值",
 	"has-reaction-u": "具有反應",
-	"leg-actions:-u": "傳奇行動：",
+	"leg-actions:-u": "傳奇動作:",
 	"gen-opts-u": "一般選項",
 	"npc-u": "NPC",
 	"roll-queries:-u": "優勢擲骰方式:",
@@ -81,32 +81,32 @@
 	"adv-toggle": "優劣勢切換",
 	"query-adv": "擲骰時詢問",
 	"never-adv": "不骰優勢",
-	"whisp-rolls-gm:-u": "向 GM 暗骰：",
+	"whisp-rolls-gm:-u": "向GM暗骰:",
 	"never-whisp": "永不暗骰",
 	"query-whisp": "擲骰時詢問",
 	"always-whisp": "總是暗骰",
-	"auto-dmg-roll:-u": "自動傷害骰：",
+	"auto-dmg-roll:-u": "自動丟傷害骰",
 	"never-dmg": "不要自動丟傷害",
 	"always-dmg": "自動丟傷害 &amp; 重擊",
 	"ac": "護甲等級",
 	"hp": "生命值",
 	"speed": "速度",
-	"language-proficiencies": "語言熟練：",
-	"skill-proficiencies": "技能熟練：",
-	"weapon-proficiencies": "武器熟練：",
+	"language-proficiencies": "語言熟練項:",
+	"skill-proficiencies": "技能熟練項:",
+	"weapon-proficiencies": "武器熟練項",
 	"armor-proficiencies": "護甲熟練項:",
-	"tool-proficiencies": "工具熟練：",
+	"tool-proficiencies": "工具熟練項:",
 	"saving-throw": "豁免檢定",
 	"str": "力量",
 	"dex": "敏捷",
 	"con": "體質",
 	"int": "智力",
-	"wis": "睿智",
+	"wis": "感知",
 	"cha": "魅力",
 	"skills": "技能",
 	"acrobatics": "特技",
 	"animal_handling": "馴獸",
-	"arcana": "秘法",
+	"arcana": "奧秘",
 	"athletics": "運動",
 	"deception": "欺瞞",
 	"history": "歷史",
@@ -115,7 +115,7 @@
 	"investigation": "調查",
 	"medicine": "醫藥",
 	"nature": "自然",
-	"perception": "感知",
+	"perception": "觀察",
 	"performance": "表演",
 	"persuasion": "說服",
 	"religion": "宗教",
@@ -147,16 +147,16 @@
 	"target:": "目標:",
 	"to-hit-place": "單一目標",
 	"on-hit:-u": "命中:",
-	"on-hit-place": "劈砍",
-	"on-hit2:-u": "命中 2 ：",
+	"on-hit-place": "揮砍",
+	"on-hit2:-u": "命中2:",
 	"on-hit-2-place": "火焰",
-	"hit:": "命中： ",
+	"hit:": "命中: ",
 	"reactions": "反應",
 	"npc-repeating-name-place": "格檔",
-	"npc-repeating-desc-place": "此生物在對抗... 時增加 2 點 AC",
+	"npc-repeating-desc-place": "此生物在對抗.. 時增加2點AC",
 	"spells": "法術",
 	"prep-u": "準備",
-	"school:-u": "學派：",
+	"school:-u": "學派:",
 	"abjuration": "防護",
 	"conjuration": "咒法",
 	"divination": "預言",
@@ -167,33 +167,33 @@
 	"transmutation": "變化",
 	"ritual": "儀式",
 	"ritual-l": "儀式",
-	"range:-u": "距離：",
-	"range:": "距離：",
-	"components:-u": "成分：",
-	"components:": "成分：",
+	"range:-u": "射程:",
+	"range:": "射程:",
+	"components:-u": "成分:",
+	"components:": "成分:",
 	"spell-component-verbal": "言語",
 	"spell-component-somatic": "姿勢",
 	"spell-component-material": "材料",
 	"spell-ritual": "R",
 	"spell-concentration": "C",
-	"ruby-dust-place": "價值 50gp 的紅寶石塵",
+	"ruby-dust-place": "價值50gp的紅寶石塵",
 	"concentration-u": "專注",
 	"concentration": "專注",
-	"duration:-u": "持續時間：",
-	"duration:": "持續時間：",
+	"duration:-u": "持續時間:",
+	"duration:": "持續時間:",
 	"difficulty-class-abv": "DC",
-	"output:-u": "輸出：",
+	"output:-u": "輸出:",
 	"spellcard-u": "法術卡",
-	"spell-atk:-u": "法術攻擊：",
+	"spell-atk:-u": "法術攻擊:",
 	"none": "無",
-	"dmg:-u": "傷害：",
-	"dmg2:-u": "傷害 2 ：",
-	"healing:-u": "治療：",
-	"add-ability-mod-u": "將屬性調整值加到傷害或治療上",
-	"effect:-u": "效果：",
-	"npc-atk-effect-place": "減半傷害",
-	"desc:-u": "描述：",
-	"at-higher-lvl:-u": "高等級施法：",
+	"dmg:-u": "傷害:",
+	"dmg2:-u": "傷害2:",
+	"healing:-u": "治療:",
+	"add-ability-mod-u": "增加屬性調整到傷害或治療上",
+	"effect:-u": "效果:",
+	"npc-atk-effect-place": "一半傷害",
+	"desc:-u": "描述:",
+	"at-higher-lvl:-u": "升環:",
 	"at-higher-lvl": "升環",
 	"higher-lvl-cast": "升環施法",
 	"leg-actions": "傳奇動作",
@@ -418,9 +418,9 @@
 	"encumbrance:-u": "負重:",
 	"ammo-tracking:-u": "彈藥追蹤:",
 	"general-opts-u": "一般選項",
-	"transition-text": "點擊以下其中一張圖片會將你目前角色卡的資料重新格式化到此角色卡中。此改變是永久性的且無法被復原。",
+	"transition-text": "Clicking one of the images below will reformat the data from your current sheet to this sheet. These changes are permanent and cannot be undone.",
 	"transition-text-highlight": "請在使用此工具之前備份您的遊戲。",
-	"choose-sheet-transfer": "選擇你要導入的角色卡",
+	"choose-sheet-transfer": "CHOOSE THE SHEET YOU ARE TRANSFERING FROM",
 	"community-sheet-u": "社群角色紙",
 	"shaped-sheet-u": "Shaped角色紙",
 	"transition-opts-u": "轉換選項",
@@ -462,8 +462,8 @@
 	"show": "顯示",
 	"hide": "隱藏",
 	"npc-name-in-rolls-desc:-u": "在NPC的擲骰結果中，在擲骰結果表格中顯示或隱藏NPC的名稱。",
-	"public:-u": "公開",
-	"to-gm:-u": "給<span class='togm'>GM</span>",
+	"public:-u": "PUBLIC",
+	"to-gm:-u": "TO <span class='togm'>GM</span>",
 	"toggle-roll-whisper": "擲骰時詢問",
 	"attribute-opts-u": "屬性選項",
 	"save-opts-u": "豁免選項",
@@ -477,33 +477,33 @@
 	"armor-class-tracking:-u": "護甲等級追蹤:",
 	"automatic": "自動",
 	"cantrip-progression:-u": "戲法進度",
-	"cantrip-dice-u": "戲法骰",
-	"cantrip-beam-u": "戲法光束",
+	"cantrip-dice-u": "CANTRIP DICE",
+	"cantrip-beam-u": "CANTRIP BEAM",
 	"slots_total-u": "總共法術位",
 	"slots_remaining-u": "剩餘法術位",
 	"level-calculations:-u": "自動等級計算:",
 	"spell_slot_modifiers-u": "法術位調整",
 	"lvl-u": "等級",
 	"include_spell_desc:-u": "在攻擊中包括法術描述:",
-	"token_size-u": "指示物大小",
+	"token_size-u": "TOKEN SIZE",
 	"add-dex-tiebreaker-u": "將敏捷作為小數填加到先攻中",
 	"initiative-style:-u": "先攻設定:",
-	"query-attr-u": "查詢屬性",
+	"query-attr-u": "QUERY ATTRIBUTE",
 	"custom-skills-u": "自訂技能",
 	"weapon-u": "武器",
-	"armor-u": "盔甲",
-	"other-u": "其他",
+	"armor-u": "ARMOR",
+	"other-u": "OTHER",
 	"source:-u": "來源:",
-	"source-type:-u": "來源類型：",
-	"racial": "種族",
+	"source-type:-u": "SOURCE TYPE:",
+	"racial": "Racial",
 	"class": "職業",
 	"feat": "專長",
 	"feats": "專長",
-	"other": "其他",
+	"other": "Other",
 	"partial": "部分",
 	"show_all": "顯示全部",
-	"cr_only": "C&R 限定",
-	"spell-icons:-u": "法術圖示：",
+	"cr_only": "C&R Only",
+	"spell-icons:-u": "SPELL ICONS:",
 	"custom-pb:-u": "自訂熟練加值:",
 	"show-global-attack-field-u": "顯示通用攻擊調整值欄位",
 	"show-global-damage-field-u": "顯示通用傷害調整值欄位",
@@ -527,7 +527,7 @@
 	"b-custom-info": "當熟練加值類型設定為自訂時，角色卡將使用該數值作為角色的熟練加值。",
 	"footer-wiki-link": "有關此角色卡，其功能或用途的更多訊息，請查看Roll20 Wiki的官方文件。https://wiki.roll20.net/5th_Edition_OGL_by_Roll20",
 	"accepting-drop-u": "接受從COMPENDIUM導入",
-	"are_you_sure": "你確定要將此角色轉為 ",
+	"are_you_sure": "Are you sure you want to turn this character into a ",
 	"yes": "是",
 	"next": "下一步",
 	"cancel": "取消",
@@ -544,7 +544,7 @@
 	"charmancer-compendium-detail": "The Charactermancer目前支持龍與地下城第5版SRD、玩家手冊和Guildmasters' Guide to Ravnica。您可以在商城中將玩家手冊和Guildmasters' Guide to Ravnica添加到compendium中，或者遊戲所有者可以與遊戲中的每個人分享他的compendium。",
 	"charmancer-choose-race": "選擇種族:",
 	"charmancer-custom-race-name": "自訂種族名稱:",
-	"charmancer-custom-subclass-name:": "自訂子職業名稱：",
+	"charmancer-custom-subclass-name:": "Custom sublass Name:",
 	"charmancer-additional-cantrips": "額外戲法",
 	"charmancer-additional-lvl-1-spells": "額外一環法術",
 	"suggested-abilities": "建議的屬性: ",
@@ -587,17 +587,17 @@
 	"available-points:": "可用點數: ",
 	"equipment-choice-text": "您想如何選擇您的裝備?",
 	"charmancer-start": "開始",
-	"clear-abilities": "清除指定內容",
+	"clear-abilities": "Clear Assignment",
 	"use-charactermancer-for-new:-u": "新角色使用等級1的Charactermancer:",
 	"use-charactermancer-for-new-info": "啟用此選項後，將使用等級1的Roll20 Charactermancer打開所有新角色。關閉此選項將直接在角色卡上開始新角色，仍然可以從角色卡的設定選項卡中手動執行等級1的Charactermancer。",
 	"feat-pre-check": "仔細地看！ 不會自動檢查先決條件。",
 	"stats-rolled-hint": "我們來幫您擲骰子! 請檢查聊天視窗來察看詳細結果。將結果分配到您的屬性:",
-	"return-to:": "返回： ",
+	"return-to:": "Return to: ",
 	"do_you_want_mancer": "你想怎麼創造此角色?",
-	"no": "否",
+	"no": "No",
 	"global-ac-u": "通用AC調整值",
 	"show-global-ac-field-u": "顯示通用AC調整值欄位",
-	"warning-customac-u": "注意——自訂 AC 並未被使用。要使用自訂 AC ，請卸除盔甲。",
+	"warning-customac-u": "ATTENTION - CUSTOM AC IS NOT BEING USED. TO USE CUSTOM AC, UNEQUIP ARMOR.",
 	"manual": "直接編輯角色卡",
 	"npc-new": "創建 NPC",
 	"mancer-confirm-yes": "使用Charactermancer",
@@ -620,26 +620,26 @@
 	"charmancer-welcome-lp": "歡迎來到Charactermancer升級！",
 	"charmancer-leveler-what-is-lp": "看看您，獲得了那麼多經驗後。現在是時候要求您的獎勵了。您會一步一步地做一些決定，您的角色很快就會升上下一個等級。在整個過程中會保存更改，但是如果您改變了主意，則需要重新查看之後的步驟和選擇。",
 	"charmancer-compendium-detail-lp": "The Charactermancer目前支持龍與地下城第5版SRD、玩家手冊和Guildmasters' Guide to Ravnica。珊娜薩的萬事指南將在未來幾週內得到支持。您可以在商城中將玩家手冊和Guildmasters' Guide to Ravnica添加到compendium中，或者遊戲所有者可以與遊戲中的每個人分享他的compendium。",
-	"roll:-u": "擲骰：",
-	"roll": "擲骰",
+	"roll:-u": "ROLL:",
+	"roll": "Roll",
 	"prerequisite:": "先決條件:",
-	"back": "返回",
-	"back-to-top": "返回頂端",
+	"back": "BACK",
+	"back-to-top": "Back to Top",
 	"choose-a-class:": "選擇職業:",
 	"custom-class-name:": "自訂職業名稱",
 	"charmancer-class-features:": "職業能力: ",
-	"charmancer-subclass-features:": "子職業能力：",
+	"charmancer-subclass-features:": "Subclass Features:",
 	"hit-die:": "生命骰:",
-	"average": "一般",
+	"average": "Average",
 	"hp-u": "HP",
 	"saving-throw-proficiency": "豁免熟練",
-	"armor": "盔甲",
+	"armor": "Armor",
 	"equipment": "裝備:",
 	"language": "語言",
 	"skill": "技能",
-	"tool": "工具",
+	"tool": "Tool",
 	"weapon": "武器",
-	"add-another-feature": "加入更多能力",
+	"add-another-feature": "Add Another Feature",
 	"add-another-proficiency": "填加其他熟練",
 	"innate-spellcasting:": "天生施法:",
 	"spellcasting-ability": "施法屬性:",
@@ -647,8 +647,8 @@
 	"number-of-lvl-1-spells": "1環法術的數量：",
 	"spell-list": "法術列表:",
 	"ability-score-method": "屬性值決定方法:",
-	"select-your-choices": "進行選擇：",
-	"input-your-scores": "輸入你的數值：",
+	"select-your-choices": "Select Your Choices:",
+	"input-your-scores": "Input Your Scores:",
 	"choose-background": "選擇背景:",
 	"personality-traits": "人格特點",
 	"ideal": "理想",
@@ -656,23 +656,23 @@
 	"flaw": "缺點",
 	"you-have-chosen-starting-gold": "您選擇了起始資金，而不是從您的背景中獲取裝備。",
 	"you-have-created-custom-class": "您已經創建了一個自訂職業; 完成Charactermancer後，您可以在角色卡中添加裝備。",
-	"arcane-is-mystery": "秘法對你而言是玄奧之物。",
-	"your-character-dont-have-spells-this-lvl": "你的角色在此等級並未擁有法術。點擊「下一步」來總覽你的角色！",
+	"arcane-is-mystery": "The Arcane is a mystery to you.",
+	"your-character-dont-have-spells-this-lvl": "Your character doesn't have spells at this level. Click “Next” to review your character!",
 	"charmancer-a-feat-represents": "專長代表了成就，勇氣，決心和專業知識。 這是你努力的回報。",
-	"you-really-havent-done": "你真的還沒做到那種程度",
-	"review-your-choices": "總覽你的選擇：",
+	"you-really-havent-done": "You really haven't done that much yet",
+	"review-your-choices": "Review your choices:",
 	"race": "種族",
-	"abilities": "屬性",
-	"bio": "個人簡歷",
-	"name-background": "名稱：",
-	"building-your-character": "建構你的角色......",
-	"charmancer-only-choice-left-is-on-or": "剩下唯一的選擇是繼續前進或者回頭。如果你正在編輯現有的角色，當你套用變更時所有現有的資料將會在虛空中遺失。",
-	"apply-changes": "套用變更",
-	"pick-your-equipment": "挑選裝備",
+	"abilities": "Abilities",
+	"bio": "Bio",
+	"name-background": "Name:",
+	"building-your-character": "Building your character...",
+	"charmancer-only-choice-left-is-on-or": "The only choice left is to press on or turn back. If you're editing an existing character, all your existing data will be lost into the void when you apply your changes.",
+	"apply-changes": "Apply Changes",
+	"pick-your-equipment": "Pick your equipment",
 	"you-havent-chosen-background": "你還沒有選擇背景。",
 	"you-havent-selected-class": "你還沒有選擇職業。",
 	"ability-score": "屬性值",
 	"you-can-increase-two-abilites": "你可以將你的兩個屬性提高1點，或者將你的一個屬性提高2點",
-	"before-leveling": "在升級之前",
-	"after-leveling": "在升級之後"
+	"before-leveling": "Before Leveling",
+	"after-leveling": "After Leveling"
 }
